src/lib.pyx


def ratio(grouph: Slvs_hGroup, entityA: Slvs_Entity, entityB: Slvs_Entity, value: double, workplane: Slvs_Entity) -> Slvs_Constraint:
    return Slvs_Ratio(grouph, entityA, entityB, value, workplane)

def symmetric(grouph: Slvs_hGroup, entityA: Slvs_Entity, entityB: Slvs_Entity, entityC: Slvs_Entity, workplane: Slvs_Entity) -> Slvs_Constraint:
    return Slvs_Symmetric(grouph, entityA, entityB, entityC, workplane)

def symmetric_h(grouph: Slvs_hGroup, ptA: Slvs_Entity, ptB: Slvs_Entity, workplane: Slvs_Entity) -> Slvs_Constraint:
    return Slvs_SymmetricH(grouph, ptA, ptB, workplane)

def symmetric_v(grouph: Slvs_hGroup, ptA: Slvs_Entity, ptB: Slvs_Entity, workplane: Slvs_Entity) -> Slvs_Constraint:
    return Slvs_SymmetricV(grouph, ptA, ptB, workplane)

def midpoint(grouph: Slvs_hGroup, ptA: Slvs_Entity, ptB: Slvs_Entity, workplane: Slvs_Entity) -> Slvs_Constraint:
    return Slvs_Midpoint(grouph, ptA, ptB, workplane)

def horizontal(grouph: Slvs_hGroup, entityA: Slvs_Entity, workplane: Slvs_Entity, entityB: Slvs_Entity = SLVS_NO_ENTITY_E) -> Slvs_Constraint:
    return Slvs_Horizontal(grouph, entityA, workplane, entityB)

def vertical(grouph: Slvs_hGroup, entityA: Slvs_Entity, workplane: Slvs_Entity, entityB: Slvs_Entity = SLVS_NO_ENTITY_E) -> Slvs_Constraint:
    return Slvs_Vertical(grouph, entityA, workplane, entityB)

def diameter(grouph: Slvs_hGroup, entityA: Slvs_Entity, value: double) -> Slvs_Constraint:
    return Slvs_Diameter(grouph, entityA, value)

def same_orientation(grouph: Slvs_hGroup, entityA: Slvs_Entity, entityB: Slvs_Entity) -> Slvs_Constraint:
    return Slvs_SameOrientation(grouph, entityA, entityB)

def angle(grouph: Slvs_hGroup, entityA: Slvs_Entity, entityB: Slvs_Entity, value: double, workplane: Slvs_Entity, inverse: int) -> Slvs_Constraint:
    return Slvs_Angle(grouph, entityA, entityB, value, workplane, inverse)

def perpendicular(grouph: Slvs_hGroup, entityA: Slvs_Entity, entityB: Slvs_Entity, workplane: Slvs_Entity, inverse: int) -> Slvs_Constraint:
    return Slvs_Perpendicular(grouph, entityA, entityB, workplane, inverse)

def parallel(grouph: Slvs_hGroup, entityA: Slvs_Entity, entityB: Slvs_Entity, workplane: Slvs_Entity) -> Slvs_Constraint:
    return Slvs_Parallel(grouph, entityA, entityB, workplane)

def tangent(grouph: Slvs_hGroup, entityA: Slvs_Entity, entityB: Slvs_Entity, workplane: Slvs_Entity) -> Slvs_Constraint:
    return Slvs_Tangent(grouph, entityA, entityB, workplane)

def distance_proj(grouph: Slvs_hGroup, ptA: Slvs_Entity, ptB: Slvs_Entity, value: double) -> Slvs_Constraint:
    return Slvs_DistanceProj(grouph, ptA, ptB, value)

def length_diff(grouph: Slvs_hGroup, entityA: Slvs_Entity, entityB: Slvs_Entity, value: double, workplane: Slvs_Entity) -> Slvs_Constraint:
    return Slvs_LengthDiff(grouph, entityA, entityB, value, workplane)

def dragged(grouph: Slvs_hGroup, ptA: Slvs_Entity, workplane: Slvs_Entity) -> Slvs_Constraint:
    return Slvs_Dragged(grouph, ptA, workplane)

# solver
class ResultFlag(IntEnum):
    """Symbol of the result flags."""
    OKAY = 0
    INCONSISTENT = auto()
    DIDNT_CONVERGE = auto()
    TOO_MANY_UNKNOWNS = auto()

def solve_sketch(grouph: Slvs_hGroup, calculateFaileds: int):
    return Slvs_SolveSketch(grouph, calculateFaileds)

def get_param(e: Slvs_Entity, index: int):
    return Slvs_GetParamValue(e, index)

def clear():
    Slvs_ClearSketch()